--- a/base/_mq.scss
+++ b/base/_mq.scss
@@ -1,3 +1,13 @@
+@media (max-width:1630px){
+    body main .showcase .video2 .pqsi{
+        height: 104%;
+        width: 90%;
+        bottom: 650px;
+        left: 70px;
+    }
+
+}
+
 @media (max-width : 1500px){
      body .header{
         background-color: black;
@@ -40,6 +50,12 @@
         width: 100%;
         height: 100%;
         background: rgba(0,0,0,0.6);
+    }
+    body main .showcase .video2 .pqsi{
+        height: 440px;
+        width: 68%;
+        bottom: 420px;
+        left: 175px;
     }
     
    body main .redes{
@@ -100,6 +116,12 @@
     }
 }
 @media (max-width:1215px){
+    body main .showcase .video2 .pqsi{
+        height: 440px;
+        width: 83%;
+        bottom: 420px;
+        left: 80px;
+    }
    body .camp .flex-container{
         display: flex;
         justify-content: center;
@@ -239,6 +261,49 @@ body main .akali .titulona p{
     font-family: 'Oswald', sans-serif;
 }
 }
+@media (max-width:1150px){
+    .bodycamp .row .column{
+        flex: 50%;
+                padding: 25px;
+                
+       
+
+}
+.bodycamp .row .column img{
+    width: 100%;
+    margin:25px;
+    box-shadow: 5px 5px 5px 5px; color:rgba(30, 12, 95, 0.76);
+    border-radius: 15px;
+
+}
+.bodycamp .row{
+    display: flex;
+         padding: 25px;
+         flex-wrap: wrap;
+}
+}
+@media (max-width:1100px){
+    body footer .playstore a{
+        width: 240px;
+        background-color: rgba(48,13,151,0.61);
+    }
+}
+@media (max-width:1040px){
+    body footer .playstore a{
+        margin: 0 5px;
+        padding: 0 5px;
+        height: 60px;
+        width: 200px;
+        text-align: center;
+        background-color: rgb(48, 13, 151);
+        font-size: 14px;
+
+    }
+    body .regi .regitit1 {
+        width: 100vh;
+        margin-left: 50px;
+    }
+}
 @media (max-width : 960px){
    body footer .playstore h3 {
         padding-right: 20px;
@@ -255,6 +320,90 @@ body main .akali .titulona p{
         right: 400px;
         
     }
+    body .regi .regitit1 {
+        width: 100vh;
+        margin-left: 50px;
+        margin-right: 0px;
+    }
+    body .regi{
+        width: 100vh;
+        height: 100vh;
+       background: none;
+    }
+    .nashor{
+        background-image: url(https://wallpaperboat.com/wp-content/uploads/2020/02/lol-03.jpg);
+        background-size: cover;
+        background-repeat: repeat;
+        background-attachment: fixed;
+    }
+}
+@media (max-width:930px){
+.grietaimg img {
+    width: 350px;
+    height: auto;
+    border-radius: 15px;
+    border: 2px solid rgb(48, 13, 151);
+    box-shadow: 14px 8px 60px 15px rgba(48,13,151,0.61);
+-webkit-box-shadow: 14px 8px 60px 15px rgba(48,13,151,0.61);
+-moz-box-shadow: 14px 8px 60px 15px rgba(48,13,151,0.61);
+}
+.grietaimg {
+    padding-top: 100px;
+}
+.aramimg{
+    padding-top: 100px;
+}
+.aramimg img{
+    width: 350px;
+    height: auto;
+    border-radius: 15px;
+    border: 2px solid rgb(48, 13, 151);
+    box-shadow: 14px 8px 60px 15px rgba(48,13,151,0.61);
+    -webkit-box-shadow: 14px 8px 60px 15px rgba(48,13,151,0.61);
+    -moz-box-shadow: 14px 8px 60px 15px rgba(48,13,151,0.61);   
+}
+.grieta .uno{
+    display: none;
+}
+.bodycamp .camp .flex-container .grieta .dos{
+    display: block;
+}
+}
+
+@media (max-width:900px){
+    body main .showcase .video2 .pqsi{
+        height: 440px;
+        width: 83%;
+        bottom: 420px;
+        left: 80px;
+        border: none;
+    }
+   body main .showcase .video-container{
+        display: none;
+    }
+   body main .showcase .video2{
+        width: 100vh;
+    }
+     body .regi{
+        height: 100vh;
+        width: 100vh;
+    }
+    body .regi .regitit1{
+        height: 100vh;
+        width: 100vh;
+    }
+}
+@media (max-width:820px){
+    body .container-img{
+        width: 95%;
+        grid-template-columns: repeat(2,1fr);
+        grid-gap: 10px;
+        grid-template-rows: 200px;
+    }
+   body .container-img .box-img:nth-child(1){
+        grid-column-start:span 1 ;
+    }
+
 }
 @media (max-width:845px){
     body footer .playstore h3{
@@ -275,18 +424,6 @@ body main .akali .titulona p{
         background-color: rgb(48, 13, 151);
     }
 }
-@media (max-width:820px){
-    body .container-img{
-        width: 95%;
-        grid-template-columns: repeat(2,1fr);
-        grid-gap: 10px;
-        grid-template-rows: 200px;
-    }
-   body .container-img .box-img:nth-child(1){
-        grid-column-start:span 1 ;
-    }
-
-}
 @media (max-width:768px){
     body{
         padding-top: 70px;
@@ -296,8 +433,13 @@ body main .akali .titulona p{
         height: 60px;
       
     }
-   body main .showcase{
-        height: 300px;
+    body{
+        padding-top: 70px;
+        background-color: black;
+    }
+   body .header{
+        height: 60px;
+      
     }
   body .camp .flex-container .grietaimg img {
         width: 350px;
@@ -332,196 +474,63 @@ body main .akali .titulona p{
     body main .akali .cubito{
         right: 200px;
     }
-}
-@media (max-width:530px){
-   body main .showcase .video-container{
-        position: absolute;
-        width: 100%;
-        height: auto;
-        
-        overflow: hidden;
-
-
-}
-body main .akali .cubito{
-    right: 50px;
-}
-body .container-img{
-    width: 100vh;
-    grid-template-columns: repeat(1,1fr);
-}
-body .container-img .box-img{
-    height: 300px;
-    margin: 10px;
-
-}
-body main .showcase{
-    width: 100%;
-    height: 250px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    padding: 0px 20px;
-    color: antiquewhite;
-    position: relative;
-    margin-top: 70px;
-    
-}
-body main .showcase .video-container{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    
-}
-body main .showcase .video-container video{
-width: 100%;
-
-}
-body main .redes{
-    display: flex;
-    height: 90px;
-    align-items: center;
-    justify-content: center;
-    background-color: rgb(48, 13, 151);
-    margin-top: 20px;
-
-}
-body main .redes ul li{
-    width: 35px;
-    height: 30x;
-    margin: 0px 10px;
-}
-body main .redes ul li a{
-    background-color: #333;
-    color: aliceblue;
-    font-size: 16px;
-    box-shadow: 0px 3px 5px 0px rgba(0, 0 , 0, .2);
-    transition: .2s;
-}
-}
-@media (max-width:1630px){
-    body main .showcase  .video2 .pqsi{
-        height: 104%;
-        width: 90%;
-        bottom: 650px;
-        left: 70px;
-    }
-
-}
-@media (max-width:1500px){
-    body main .showcase .video2 .pqsi{
-        height: 440px;
-        width: 68%;
-        bottom: 420px;
-        left: 175px;
-    }
-
-}
-@media (max-width:1200px){
-    body main .showcase .video2 .pqsi{
-        height: 440px;
-        width: 83%;
-        bottom: 420px;
-        left: 80px;
-    }
-}
-@media (max-width:900px){
-    body main .showcase .video2 .pqsi{
-        height: 440px;
-        width: 83%;
-        bottom: 420px;
-        left: 80px;
-        border: none;
-    }
-   body main .showcase .video-container{
-        display: none;
-    }
-   body main .showcase .video2{
-        width: 100vh;
-    }
-     body .regi{
-        height: 100vh;
-        width: 100vh;
-    }
-    body .regi .regitit1{
-        height: 100vh;
-        width: 100vh;
-    }
-}
-@media (max-width:700px){
-    body .regi{
-        height: 100%;
-        width: 100%;
-    }
-    body .regi .regitit1{
-        height: 100%;
-        width: 100%;
-    }
-
-}
-@media (max-width:1100px){
-    body footer .playstore a{
-        width: 240px;
-        background-color: rgba(48,13,151,0.61);
-    }
-}
-@media (max-width:1040px){
-    body footer .playstore a{
-        margin: 0 5px;
-        padding: 0 5px;
-        height: 60px;
-        width: 200px;
-        text-align: center;
-        background-color: rgb(48, 13, 151);
-        font-size: 14px;
-
-    }
-}
-@media (max-width:1150px){
     .bodycamp .row .column{
         flex: 50%;
-                padding: 25px;
-                
-       
+       padding: 15px;
+      
 
-}
-.bodycamp .row .column img{
-    width: 100%;
-    margin:25px;
-    box-shadow: 5px 5px 5px 5px; color:rgba(30, 12, 95, 0.76);
-    border-radius: 15px;
-
-}
-.bodycamp .row{
-    display: flex;
-         padding: 25px;
-         flex-wrap: wrap;
-}
-}
-@media (max-width:768px){
-.bodycamp .row .column{
-                 flex: 50%;
-                padding: 15px;
-               
- 
 
 } 
 .bodycamp .row .column img{
-    width: 100%;
-    margin:25px;
-    box-shadow: 5px 5px 5px 5px; color:rgba(30, 12, 95, 0.76);
-    border-radius: 15px;
+width: 100%;
+margin:25px;
+box-shadow: 5px 5px 5px 5px; color:rgba(30, 12, 95, 0.76);
+border-radius: 15px;
 
 }
 .bodycamp .row{
-         display: flex;
-         padding: 25px;
-         flex-wrap: wrap;
-         width: 100vh;
+display: flex;
+padding: 25px;
+flex-wrap: wrap;
+width: 100vh;
 }   
+}
+@media (max-width:700px){
+    body .regi{
+        height: 100vh;
+        width: 100%;
+    }
+    body .regi .regitit1{
+        height: 100%;
+        width: 100%;
+    }
+
+}
+@media (max-width:670px){
+    body .container-img{
+        width: 100vh;
+        grid-template-columns: repeat(1,1fr);
+    }
+    body .container-img .box-img{
+        height: 300px;
+        margin: 10px;
+    
+    }
+}
+@media (max-width:600px){
+    body .regi .regitit1{
+        width: 100vh;
+        height: 100vh;
+        margin-left: 50px;
+        margin-right: 0px;
+        height: 100%;
+    }
+    body .regi{
+        width: 100vh;
+        height: 100vh;
+       background: none;
+
+}
 }
 @media (max-width:570px){
     .bodycamp .row .column{
@@ -544,53 +553,13 @@ body main .redes ul li a{
          width: 100vh;
 }   
 }
-@media (max-width:1020px){
-    body .regi .regitit1 {
-        width: 100vh;
-        margin-left: 50px;
+@media (max-width:530px){
+    body main .showcase .video-container{
+         position: absolute;
+         width: 100%;
+         height: auto;
+         
+         overflow: hidden;
     }
 }
-@media (max-width:950px){
-    body .regi .regitit1 {
-        width: 100vh;
-        margin-left: 50px;
-        margin-right: 0px;
-    }
-    body .regi{
-        width: 100vh;
-        height: 100vh;
-       background: none;
-    }
-    body{
-        background-image: url(https://wallpaperboat.com/wp-content/uploads/2020/02/lol-03.jpg);
-        background-size: cover;
-        background-repeat: repeat;
-        background-attachment: fixed;
-    }
-}
-    @media (max-width:600px){
-        body .regi .regitit1{
-            width: 100vh;
-            height: 100vh;
-            margin-left: 50px;
-            margin-right: 0px;
-            height: 100%;
-        }
-        body .regi{
-            width: 100vh;
-            height: 100vh;
-           background: none;
 
-    }
-    }
-    @media (max-width:670px){
-        body .container-img{
-            width: 100vh;
-            grid-template-columns: repeat(1,1fr);
-        }
-        body .container-img .box-img{
-            height: 300px;
-            margin: 10px;
-        
-        }
-    }
