--- a/css/style.css
+++ b/css/style.css
@@ -475,104 +475,12 @@ footer {
       font-size: 16px;
       margin: 5px; }
 
-.video-container:after {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.6); }
-
-.pqsi a:Hover {
-  border: 1px solid rgba(128, 128, 128, 0.89);
-  background-color: #33c9bc;
-  transition: 0.6s; }
-
-.redes ul:hover a {
-  filter: blur(1px); }
-
-.redes ul li a:hover {
-  transform: translateY(-1px) scale(1.2);
-  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.4);
-  filter: none; }
-
-.instagram:hover {
-  background-color: #d12545; }
-
-.twitch:hover {
-  background-color: #c300ff; }
-
-.youtube:hover {
-  background-color: #f11212; }
-
-.discord:hover {
-  background-color: #4062d1; }
-
-.column img:Hover {
-  color: black;
-  scale: 1.15;
-  transition: 0.6s; }
-
-.playstore a:Hover {
-  scale: 1.15;
-  transition: 0.5s;
-  background-color: #c300ff; }
-
-@keyframes transfo {
-  0% {
-    background-image: url(https://www.leagueoflegends.com/static/assassin-two-3a0fb5383eca19a4bc9b3c53310380bf.png);
-    background-size: cover;
-    transform: rotateZ(20deg);
-    border: 1px solid gray; }
-  50% {
-    background-image: url(https://www.leagueoflegends.com/static/assassin-four-d763afcd430fe6194d5640d6bf2a5941.png);
-    background-size: cover;
-    transform: rotateZ(10deg);
-    border: 1px solid red; }
-  100% {
-    background-image: url(https://www.leagueoflegends.com/static/assassin-three-3b9f65b6c20d5779628f7a8b04b43819.png);
-    background-size: cover;
-    transform: rotateZ(0deg);
-    border: 1px solid #631063; } }
-
-.pqsi a:Hover {
-  border: 1px solid rgba(128, 128, 128, 0.89);
-  background-color: #33c9bc;
-  transition: 0.6s; }
-
-.perra:hover {
-  transition: 0.5s;
-  color: beige; }
-
-.preg a:hover {
-  color: beige;
-  transition: 0.3s; }
-
-.nav-link:hover {
-  background-color: #256cf0;
-  transition: 0.5s; }
-
-.card .card-body .btn:hover {
-  background-color: #1f1997;
-  border: 1px solid white;
-  transition: 0.3s; }
-
-.contaner-img .box-img:nth-child(1) {
-  grid-column-start: span 2; }
-
-.container-img .box-img:nth-child(4) {
-  grid-row-start: span 2; }
-
-::placeholder {
-  color: aliceblue; }
-
-.regitit1 .regitit2 .perra:hover {
-  transition: 0.5s;
-  color: beige; }
-
-.regitit1 .regitit2 .preg a:hover {
-  color: beige;
-  transition: 0.3s; }
+@media (max-width: 1630px) {
+  body main .showcase .video2 .pqsi {
+    height: 104%;
+    width: 90%;
+    bottom: 650px;
+    left: 70px; } }
 
 @media (max-width: 1500px) {
   body .header {
@@ -609,6 +517,11 @@ footer {
     width: 100%;
     height: 100%;
     background: rgba(0, 0, 0, 0.6); }
+  body main .showcase .video2 .pqsi {
+    height: 440px;
+    width: 68%;
+    bottom: 420px;
+    left: 175px; }
   body main .redes {
     display: flex;
     height: 90px;
@@ -657,6 +570,11 @@ footer {
     font-family: 'Oswald', sans-serif; } }
 
 @media (max-width: 1215px) {
+  body main .showcase .video2 .pqsi {
+    height: 440px;
+    width: 83%;
+    bottom: 420px;
+    left: 80px; }
   body .camp .flex-container {
     display: flex;
     justify-content: center;
@@ -762,6 +680,39 @@ footer {
     font-size: 20px;
     font-family: 'Oswald', sans-serif; } }
 
+@media (max-width: 1150px) {
+  .bodycamp .row .column {
+    flex: 50%;
+    padding: 25px; }
+  .bodycamp .row .column img {
+    width: 100%;
+    margin: 25px;
+    box-shadow: 5px 5px 5px 5px;
+    color: rgba(30, 12, 95, 0.76);
+    border-radius: 15px; }
+  .bodycamp .row {
+    display: flex;
+    padding: 25px;
+    flex-wrap: wrap; } }
+
+@media (max-width: 1100px) {
+  body footer .playstore a {
+    width: 240px;
+    background-color: rgba(48, 13, 151, 0.61); } }
+
+@media (max-width: 1040px) {
+  body footer .playstore a {
+    margin: 0 5px;
+    padding: 0 5px;
+    height: 60px;
+    width: 200px;
+    text-align: center;
+    background-color: #300d97;
+    font-size: 14px; }
+  body .regi .regitit1 {
+    width: 100vh;
+    margin-left: 50px; } }
+
 @media (max-width: 960px) {
   body footer .playstore h3 {
     padding-right: 20px; }
@@ -773,7 +724,73 @@ footer {
     transform: rotateZ(45deg);
     animation: transfo 6s forwards infinite;
     position: absolute;
-    right: 400px; } }
+    right: 400px; }
+  body .regi .regitit1 {
+    width: 100vh;
+    margin-left: 50px;
+    margin-right: 0px; }
+  body .regi {
+    width: 100vh;
+    height: 100vh;
+    background: none; }
+  .nashor {
+    background-image: url(https://wallpaperboat.com/wp-content/uploads/2020/02/lol-03.jpg);
+    background-size: cover;
+    background-repeat: repeat;
+    background-attachment: fixed; } }
+
+@media (max-width: 930px) {
+  .grietaimg img {
+    width: 350px;
+    height: auto;
+    border-radius: 15px;
+    border: 2px solid #300d97;
+    box-shadow: 14px 8px 60px 15px rgba(48, 13, 151, 0.61);
+    -webkit-box-shadow: 14px 8px 60px 15px rgba(48, 13, 151, 0.61);
+    -moz-box-shadow: 14px 8px 60px 15px rgba(48, 13, 151, 0.61); }
+  .grietaimg {
+    padding-top: 100px; }
+  .aramimg {
+    padding-top: 100px; }
+  .aramimg img {
+    width: 350px;
+    height: auto;
+    border-radius: 15px;
+    border: 2px solid #300d97;
+    box-shadow: 14px 8px 60px 15px rgba(48, 13, 151, 0.61);
+    -webkit-box-shadow: 14px 8px 60px 15px rgba(48, 13, 151, 0.61);
+    -moz-box-shadow: 14px 8px 60px 15px rgba(48, 13, 151, 0.61); }
+  .grieta .uno {
+    display: none; }
+  .bodycamp .camp .flex-container .grieta .dos {
+    display: block; } }
+
+@media (max-width: 900px) {
+  body main .showcase .video2 .pqsi {
+    height: 440px;
+    width: 83%;
+    bottom: 420px;
+    left: 80px;
+    border: none; }
+  body main .showcase .video-container {
+    display: none; }
+  body main .showcase .video2 {
+    width: 100vh; }
+  body .regi {
+    height: 100vh;
+    width: 100vh; }
+  body .regi .regitit1 {
+    height: 100vh;
+    width: 100vh; } }
+
+@media (max-width: 820px) {
+  body .container-img {
+    width: 95%;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 10px;
+    grid-template-rows: 200px; }
+  body .container-img .box-img:nth-child(1) {
+    grid-column-start: span 1; } }
 
 @media (max-width: 845px) {
   body footer .playstore h3 {
@@ -788,23 +805,17 @@ footer {
     height: 52px;
     background-color: #300d97; } }
 
-@media (max-width: 820px) {
-  body .container-img {
-    width: 95%;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: 10px;
-    grid-template-rows: 200px; }
-  body .container-img .box-img:nth-child(1) {
-    grid-column-start: span 1; } }
-
 @media (max-width: 768px) {
   body {
     padding-top: 70px;
     background-color: black; }
   body .header {
     height: 60px; }
-  body main .showcase {
-    height: 300px; }
+  body {
+    padding-top: 70px;
+    background-color: black; }
+  body .header {
+    height: 60px; }
   body .camp .flex-container .grietaimg img {
     width: 350px;
     height: auto;
@@ -830,137 +841,7 @@ footer {
   body .camp .flex-container .grieta .dos {
     display: block; }
   body main .akali .cubito {
-    right: 200px; } }
-
-@media (max-width: 530px) {
-  body main .showcase .video-container {
-    position: absolute;
-    width: 100%;
-    height: auto;
-    overflow: hidden; }
-  body main .akali .cubito {
-    right: 50px; }
-  body .container-img {
-    width: 100vh;
-    grid-template-columns: repeat(1, 1fr); }
-  body .container-img .box-img {
-    height: 300px;
-    margin: 10px; }
-  body main .showcase {
-    width: 100%;
-    height: 250px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    padding: 0px 20px;
-    color: antiquewhite;
-    position: relative;
-    margin-top: 70px; }
-  body main .showcase .video-container {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    overflow: hidden; }
-  body main .showcase .video-container video {
-    width: 100%; }
-  body main .redes {
-    display: flex;
-    height: 90px;
-    align-items: center;
-    justify-content: center;
-    background-color: #300d97;
-    margin-top: 20px; }
-  body main .redes ul li {
-    width: 35px;
-    height: 30x;
-    margin: 0px 10px; }
-  body main .redes ul li a {
-    background-color: #333;
-    color: aliceblue;
-    font-size: 16px;
-    box-shadow: 0px 3px 5px 0px rgba(0, 0, 0, 0.2);
-    transition: .2s; } }
-
-@media (max-width: 1630px) {
-  body main .showcase .video2 .pqsi {
-    height: 104%;
-    width: 90%;
-    bottom: 650px;
-    left: 70px; } }
-
-@media (max-width: 1500px) {
-  body main .showcase .video2 .pqsi {
-    height: 440px;
-    width: 68%;
-    bottom: 420px;
-    left: 175px; } }
-
-@media (max-width: 1200px) {
-  body main .showcase .video2 .pqsi {
-    height: 440px;
-    width: 83%;
-    bottom: 420px;
-    left: 80px; } }
-
-@media (max-width: 900px) {
-  body main .showcase .video2 .pqsi {
-    height: 440px;
-    width: 83%;
-    bottom: 420px;
-    left: 80px;
-    border: none; }
-  body main .showcase .video-container {
-    display: none; }
-  body main .showcase .video2 {
-    width: 100vh; }
-  body .regi {
-    height: 100vh;
-    width: 100vh; }
-  body .regi .regitit1 {
-    height: 100vh;
-    width: 100vh; } }
-
-@media (max-width: 700px) {
-  body .regi {
-    height: 100%;
-    width: 100%; }
-  body .regi .regitit1 {
-    height: 100%;
-    width: 100%; } }
-
-@media (max-width: 1100px) {
-  body footer .playstore a {
-    width: 240px;
-    background-color: rgba(48, 13, 151, 0.61); } }
-
-@media (max-width: 1040px) {
-  body footer .playstore a {
-    margin: 0 5px;
-    padding: 0 5px;
-    height: 60px;
-    width: 200px;
-    text-align: center;
-    background-color: #300d97;
-    font-size: 14px; } }
-
-@media (max-width: 1150px) {
-  .bodycamp .row .column {
-    flex: 50%;
-    padding: 25px; }
-  .bodycamp .row .column img {
-    width: 100%;
-    margin: 25px;
-    box-shadow: 5px 5px 5px 5px;
-    color: rgba(30, 12, 95, 0.76);
-    border-radius: 15px; }
-  .bodycamp .row {
-    display: flex;
-    padding: 25px;
-    flex-wrap: wrap; } }
-
-@media (max-width: 768px) {
+    right: 200px; }
   .bodycamp .row .column {
     flex: 50%;
     padding: 15px; }
@@ -975,6 +856,34 @@ footer {
     padding: 25px;
     flex-wrap: wrap;
     width: 100vh; } }
+
+@media (max-width: 700px) {
+  body .regi {
+    height: 100vh;
+    width: 100%; }
+  body .regi .regitit1 {
+    height: 100%;
+    width: 100%; } }
+
+@media (max-width: 670px) {
+  body .container-img {
+    width: 100vh;
+    grid-template-columns: repeat(1, 1fr); }
+  body .container-img .box-img {
+    height: 300px;
+    margin: 10px; } }
+
+@media (max-width: 600px) {
+  body .regi .regitit1 {
+    width: 100vh;
+    height: 100vh;
+    margin-left: 50px;
+    margin-right: 0px;
+    height: 100%; }
+  body .regi {
+    width: 100vh;
+    height: 100vh;
+    background: none; } }
 
 @media (max-width: 570px) {
   .bodycamp .row .column {
@@ -992,45 +901,111 @@ footer {
     flex-wrap: wrap;
     width: 100vh; } }
 
-@media (max-width: 1020px) {
-  body .regi .regitit1 {
-    width: 100vh;
-    margin-left: 50px; } }
+@media (max-width: 530px) {
+  body main .showcase .video-container {
+    position: absolute;
+    width: 100%;
+    height: auto;
+    overflow: hidden; } }
 
-@media (max-width: 950px) {
-  body .regi .regitit1 {
-    width: 100vh;
-    margin-left: 50px;
-    margin-right: 0px; }
-  body .regi {
-    width: 100vh;
-    height: 100vh;
-    background: none; }
-  body {
-    background-image: url(https://wallpaperboat.com/wp-content/uploads/2020/02/lol-03.jpg);
+.video-container:after {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6); }
+
+.pqsi a:Hover {
+  border: 1px solid rgba(128, 128, 128, 0.89);
+  background-color: #33c9bc;
+  transition: 0.6s; }
+
+.redes ul:hover a {
+  filter: blur(1px); }
+
+.redes ul li a:hover {
+  transform: translateY(-1px) scale(1.2);
+  box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.4);
+  filter: none; }
+
+.instagram:hover {
+  background-color: #d12545; }
+
+.twitch:hover {
+  background-color: #c300ff; }
+
+.youtube:hover {
+  background-color: #f11212; }
+
+.discord:hover {
+  background-color: #4062d1; }
+
+.column img:Hover {
+  color: black;
+  scale: 1.15;
+  transition: 0.6s; }
+
+.playstore a:Hover {
+  scale: 1.15;
+  transition: 0.5s;
+  background-color: #c300ff; }
+
+@keyframes transfo {
+  0% {
+    background-image: url(https://www.leagueoflegends.com/static/assassin-two-3a0fb5383eca19a4bc9b3c53310380bf.png);
     background-size: cover;
-    background-repeat: repeat;
-    background-attachment: fixed; } }
+    transform: rotateZ(20deg);
+    border: 1px solid gray; }
+  50% {
+    background-image: url(https://www.leagueoflegends.com/static/assassin-four-d763afcd430fe6194d5640d6bf2a5941.png);
+    background-size: cover;
+    transform: rotateZ(10deg);
+    border: 1px solid red; }
+  100% {
+    background-image: url(https://www.leagueoflegends.com/static/assassin-three-3b9f65b6c20d5779628f7a8b04b43819.png);
+    background-size: cover;
+    transform: rotateZ(0deg);
+    border: 1px solid #631063; } }
 
-@media (max-width: 600px) {
-  body .regi .regitit1 {
-    width: 100vh;
-    height: 100vh;
-    margin-left: 50px;
-    margin-right: 0px;
-    height: 100%; }
-  body .regi {
-    width: 100vh;
-    height: 100vh;
-    background: none; } }
+.pqsi a:Hover {
+  border: 1px solid rgba(128, 128, 128, 0.89);
+  background-color: #33c9bc;
+  transition: 0.6s; }
 
-@media (max-width: 670px) {
-  body .container-img {
-    width: 100vh;
-    grid-template-columns: repeat(1, 1fr); }
-  body .container-img .box-img {
-    height: 300px;
-    margin: 10px; } }
+.perra:hover {
+  transition: 0.5s;
+  color: beige; }
+
+.preg a:hover {
+  color: beige;
+  transition: 0.3s; }
+
+.nav-link:hover {
+  background-color: #256cf0;
+  transition: 0.5s; }
+
+.card .card-body .btn:hover {
+  background-color: #1f1997;
+  border: 1px solid white;
+  transition: 0.3s; }
+
+.contaner-img .box-img:nth-child(1) {
+  grid-column-start: span 2; }
+
+.container-img .box-img:nth-child(4) {
+  grid-row-start: span 2; }
+
+::placeholder {
+  color: aliceblue; }
+
+.regitit1 .regitit2 .perra:hover {
+  transition: 0.5s;
+  color: beige; }
+
+.regitit1 .regitit2 .preg a:hover {
+  color: beige;
+  transition: 0.3s; }
 
 * {
   margin: 0;
